--- a/index.html
+++ b/index.html
@@ -4,10 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>jQuery Examples</title>
 </head>
 <body>
     
-    <script src="js/main.js"></script>
+    <section id="about">
+        <h2 class="main-header">O mnie</h2>
+        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, recusandae harum modi aliquid expedita magnam ullam tempore! Accusantium, nobis tempora!
+        </p>
+        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, recusandae harum modi aliquid expedita magnam ullam tempore! Accusantium, nobis tempora!
+        </p>
+        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, recusandae harum modi aliquid expedita magnam ullam tempore! Accusantium, nobis tempora!
+        </p>
+
+        <button class="add-user-button">Dodaj użytkownika</button>
+        <button class="remove-user-button">Odejmij użytkownika</button>
+
+        <ul class="users-list">
+            <li>user-1</li>
+            <li>user-2</li>
+            <li>user-3</li>
+            <li>user-4</li>
+            <li>user-5</li>
+            <li>user-6</li>
+            <li>user-7</li>
+            <li>user-8</li>
+            <li>user-9</li>
+            <li>user-10</li>
+        </ul>
+
+        
+
+    </section>
+
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/6-animation.js"></script>
 </body>
 </html>
